# pre-commit-laravel-pint

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_laravel_pint/: laravel_pint.py
