[metadata]
name = pre_commit_laravel_pint
version = 0.0.1
description = Checks formatting of PHP code with laravel pint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xerbo/pre-commit-laravel-pint
author = Xerbo
author_email = xerbo@protonmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    laravel-pint = pre_commit_laravel_pint.laravel_pint:main
